--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -13,11 +13,16 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0.0"
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
     }
 
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
@@ -32,6 +37,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.10.2"
+        }
+    }
     dataBinding {
         //noinspection DataBindingWithoutKapt
         enabled = true
@@ -44,6 +55,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'com.devsung.androidhelper:support:1.0.1'
+    implementation "androidx.security:security-crypto:1.0.0"
+    implementation 'com.devsung.androidhelper:support:1.0.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation 'com.airbnb.android:lottie:4.2.1'
 }
