--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation "androidx.security:security-crypto:1.0.0"
+    implementation 'androidx.security:security-crypto:1.0.0'
     implementation 'com.devsung.androidhelper:support:1.0.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation 'com.airbnb.android:lottie:4.2.1'
