--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
@@ -60,5 +61,8 @@ dependencies {
     implementation 'androidx.security:security-crypto:1.0.0'
     implementation 'com.devsung.androidhelper:support:1.0.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
-    implementation 'com.airbnb.android:lottie:4.2.1'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
